--- a/rust/threads/Cargo.toml
+++ b/rust/threads/Cargo.toml
@@ -1,9 +1,6 @@
 [package]
-name = "simpleGet"
+name = "threads"
 version = "0.1.0"
 authors = ["RagingGrim <armandconnor.duplooy@gmail.com>"]
 
 [dependencies]
-
-[dependencies.curl]
-git = "https://github.com/alexcrichton/curl-rust"
